refactoring selectable image list

--- a/src/app/mission/mission-image-list/image-list/image-list.component.html
+++ b/src/app/mission/mission-image-list/image-list/image-list.component.html
@@ -1,21 +1,13 @@
-<ng-container *ngIf="vm$ | async; let vm">
+<ng-container *ngIf="selectableImages$ | async; let selectableImages">
     <div class="img-row">
-        <div class="img-column" *ngFor="let i of [1,2,3,4]">
-            <app-selectable-image
-                *ngFor="let img of vm.images | arrayslice: i:4;let i = index;trackBy: trackById"
-                [imageWithSelect]="img"
-                (imageSelected)="selectOrRemoveImage($event)"
-                 (click)="openImageViewer(img.image)">
-            </app-selectable-image>
+        <div class="img-column" *ngFor="let i of totalRows | arrayFromNumber">
+            <app-selectable-card selectedText="Bilde valgt" selectedIcon="check_circle"
+                *ngFor="let selectable of selectableImages | arrayslice: i:totalRows;let i = index;trackBy: trackById"
+                [isSelected]="selectable.selected"
+                (selected)="toggleSelect(selectable, $event)"
+                 (click)="imageClick(selectable.entity)">
+                 <img appImageErrorReloader class="img-card" src="{{ selectable.entity.fileURL | thumbnail }}" />
+            </app-selectable-card>
         </div>
     </div>
-
-    <ng-container *ifRole="[Roles.Leder]">
-        <button *ngIf="!vm.noSelected" mat-mini-fab aria-label="ny" class="action_fab_2"
-            (click)="openMailImageSheet()">
-            <mat-icon>send</mat-icon>
-        </button>
-    </ng-container>
-
-  
 </ng-container>
