--- a/src/app/mission/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission/mission-image-list/mission-image-list.component.html
@@ -1,11 +1,25 @@
-<app-image-list *ngIf="images$ | async; let images" 
-    [images]="images">
+<app-image-list #imageList *ngIf="images$ | async; let images"
+    [images]="images" 
+    (selectionChanged)="currentSelections = $event"
+    (imageClicked)="openImageViewer($event, images)">
 </app-image-list>
+
+<ng-container *ngIf="currentSelections.length > 0">
+    <ng-container *ifRole="[Roles.Leder]">
+        <button mat-mini-fab aria-label="ny" class="action_fab_2" (click)="openMailImageSheet(currentSelections)">
+            <mat-icon>send</mat-icon>
+        </button>
+        <button mat-mini-fab aria-label="ny" class="action_fab_3 bg-warn"
+            (click)="openConfirmDeleteDialog(currentSelections)">
+            <mat-icon>delete_forever</mat-icon>
+        </button>
+    </ng-container>
+</ng-container>
+
 
 <button *ifRole="[Roles.Leder, Roles.Ansatt, Roles.Mellomleder]" mat-mini-fab aria-label="ny" class="action_fab"
     (click)="imageInput.click()">
     <mat-icon>camera_enhance</mat-icon>
 </button>
 
-<input type="file" style="display:none" multiple #imageInput
-(change)="uploadImages($event.target.files)">
+<input type="file" style="display:none" multiple #imageInput (change)="uploadImages($event.target.files)">
