downloader service with iframe in app c

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div style="height:100%">
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
+<iframe #downloadFrame style="display:none"></iframe>
