--- a/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
@@ -1,84 +1,32 @@
-<mat-tab-group mat-stretch-tabs color="accent">
-  <mat-tab label="Generelt">
-    <mat-card class="app-card m-2 fadeInLeft max-width" *ngIf="mission">
-      <mat-card-header>
-        Informasjon
-      </mat-card-header>
-      <mat-card-content>
-        <mat-nav-list class="p-0">
-          <mat-list-item>
-            <mat-icon mat-list-icon>phone</mat-icon>
-            <a mat-line href="tel:{{ mission.phoneNumber }}">{{ mission.phoneNumber || 'Ingen telefonnummer' }}</a>
-            <p mat-line *ngIf="mission.phoneNumber">Trykk for å ringe </p>
-            <mat-icon>open_in_new</mat-icon>
-            <mat-divider [inset]="true"></mat-divider>
-          </mat-list-item>
-  
-          <mat-list-item *ngIf="mission.address">
-            <mat-icon mat-list-icon>directions_car</mat-icon>
-            <a mat-line href="https://www.google.com/maps/dir/?api=1&destination={{ mission.address }}&travelmode=driving" target="_blank">Veibeskrivelse</a>
-            <p mat-line>Trykk for å åpne kart</p>
-            <mat-icon >open_in_new</mat-icon>
-            <mat-divider [inset]="true"></mat-divider>
-          </mat-list-item>
-        </mat-nav-list>
-      </mat-card-content>
-    </mat-card> 
+<div class="p-2 max-width" *ngIf="vm">
 
-    <div class="m-2 fadeInLeft">
-      <app-list-card  [routerLink]="['/oppdrag',mission.id, 'bilder']" 
-      startIcon="photo_library" text="Bilder" endIcon="chevron_right">
-      </app-list-card>
-    </div>
+  <mat-grid-list cols="2" rowHeight="3:2" gutterSize="5" class="mat-subheading-2 mb-2">
+    <a href="tel:{{ vm.mission.phoneNumber }}">
+      <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple>
+        <span class="text-center">
+          <mat-icon class="scale-150">phone</mat-icon><br />
+          <span>{{ vm.mission.phoneNumber || 'N/A' }} </span>
+        </span>
+      </mat-grid-tile>
+    </a>
+    <a href="https://www.google.com/maps/dir/?api=1&destination={{ vm.mission.address }}&travelmode=driving"
+      target="_blank">
+      <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple>
+        <span class="text-center">
+          <mat-icon class="scale-150">directions_car</mat-icon><br />
+          <span>Veibeskrivelse</span>
+        </span>
+      </mat-grid-tile>
+    </a>
+  </mat-grid-list>
 
 
-    <mat-card class="app-card m-2 fadeInLeft max-width" *ngIf="reports && reports.length != 0">
-      <mat-card-header>
-        Rapporter
-      </mat-card-header>
-      <mat-card-content>
-        <mat-nav-list class="p-0">
-          <mat-list-item *ngFor="let report of reports">
-  
-            <mat-icon mat-list-icon>description</mat-icon>
-            <a mat-line href="{{ report.fileURL }}">{{ report.reportType?.name }}</a>
-            <p mat-line>{{ report.createdAt | date }}</p>
-  
-            <button *ifRole="[Roles.Leder]" (click)="openDeleteReportDialog(report.id)" mat-icon-button color="warn">
-              <mat-icon>delete_forever</mat-icon>
-            </button>
-  
-            <mat-icon *ifRole="[Roles.Mellomleder, Roles.Ansatt, Roles.Oppdragsgiver]" class="color-success">
-              cloud_download
-            </mat-icon>
-  
-            <mat-divider [inset]="true"></mat-divider>
-  
-          </mat-list-item>
-      </mat-nav-list>
-      </mat-card-content>
-    </mat-card>
+  <app-list-card text="Bilder" startIcon="photo_library" [routerLink]="['/oppdrag', vm.mission.id, 'bilder']">
+  </app-list-card>
+  <app-list-card text="Rapporter" startIcon="description" [routerLink]="['/oppdrag', vm.mission.id, 'rapporter']">
+  </app-list-card>
+  <app-list-card text="Notater" startIcon="rate_review" [routerLink]="['/oppdrag', vm.mission.id, 'notater']">
+  </app-list-card>
 
-  </mat-tab>
 
-  <mat-tab label="Notater">
-    <div class="p-2 max-width">
-      <app-mission-note-list *ngIf="notes"
-        [notes]="notes"
-        (noteDeleted)="deleteNote($event)">
-      </app-mission-note-list>
-    </div>
-  </mat-tab>
-</mat-tab-group>
-
-<!-- <button
-    *ifRole="[Roles.Leder, Roles.Ansatt, Roles.Mellomleder]"
-    mat-mini-fab aria-label="ny"
-    class="action_fab"
-    (click)="imageInput.click()">
-    <mat-icon>camera_enhance</mat-icon>
-</button>
-
-<input type="file" style="display:none" multiple #imageInput
-  (change)="uploadImages($event.target.files, mission?.id)"> -->
-
+</div>
