image list fixes

--- a/src/app/mission/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission/mission-image-list/mission-image-list.component.html
@@ -1,6 +1,6 @@
 <app-image-list #imageList *ngIf="images$ | async; let images"
     [totalRows]="(isXs$ | async) ? 2 : 4"
-    [images]="images" 
+    [entities]="images" 
     (selectionChanged)="currentSelections = $event"
     (imageClicked)="openImageViewer($event, images)">
 </app-image-list>
