--- a/src/app/mission/mission-image-list/image-list/image-list.component.html
+++ b/src/app/mission/mission-image-list/image-list/image-list.component.html
@@ -1,13 +1,11 @@
-<ng-container *ngIf="selectableImages$ | async; let selectableImages">
-    <div class="img-row">
-        <div class="img-column" *ngFor="let i of totalRows | arrayFromNumber">
-            <app-selectable-card selectedText="Bilde valgt" selectedIcon="check_circle"
-                *ngFor="let selectable of selectableImages | arrayslice: i:totalRows;let i = index;trackBy: trackById"
-                [isSelected]="selectable.selected"
-                (selected)="toggleSelect(selectable, $event)"
-                 (click)="imageClick(selectable.entity)">
-                 <img appImageErrorReloader class="img-card" src="{{ selectable.entity.fileURL | thumbnail }}" />
-            </app-selectable-card>
-        </div>
+<div class="entity-row">
+    <div class="entity-column" *ngFor="let i of totalRows | arrayFromNumber">
+        <app-selectable-card selectedText="Bilde valgt" selectedIcon="check_circle"
+            *ngFor="let selectable of (selectableEntities$ | async) | arrayslice: i:totalRows;let i = index;trackBy: trackById"
+            [isSelected]="selectable.selected" 
+            (selected)="toggleSelect(selectable)"
+            (click)="imageClick(selectable.entity)">
+            <img appImageErrorReloader class="entity-card fadeIn" src="{{ selectable.entity.fileURL | thumbnail }}" />
+        </app-selectable-card>
     </div>
-</ng-container>
+</div>
