add dynamic rows to report list & animations

--- a/src/app/mission/components/selectable-card/selectable-card.component.scss
+++ b/src/app/mission/components/selectable-card/selectable-card.component.scss
@@ -15,5 +15,6 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: white;
+    background-color: black;
+    color:white;
   }
