--- a/src/app/mission/mission-report-list/report-list/report-list.component.html
+++ b/src/app/mission/mission-report-list/report-list/report-list.component.html
@@ -1,11 +1,11 @@
 <div class="entity-row">
-    <div class="entity-column" *ngFor="let i of 4 | arrayFromNumber">
+    <div class="entity-column" *ngFor="let i of totalRows | arrayFromNumber">
         <app-selectable-card selectedText="Rapport valgt" selectedIcon="check_circle"
-            *ngFor="let selectable of (selectableEntities$ | async) | arrayslice: i:4;let i = index;trackBy: trackById"
+            *ngFor="let selectable of (selectableEntities$ | async) | arrayslice: i:totalRows;let i = index;trackBy: trackById"
             [isSelected]="selectable.selected" (selected)="toggleSelect(selectable)"
             (click)="reportClick(selectable.entity)">
 
-            <div class="bg-foreground text-center mat-elevation-z2 p-2 pt-6 pb-6">
+            <div class="bg-foreground text-center mat-elevation-z2 p-2 pt-6 pb-6 fadeIn">
                 <mat-icon class="scale-150 mb-2">description</mat-icon>
                 <div>{{ selectable.entity.reportType?.name }}</div>
 
