--- a/src/app/data-management/components/document-type-form/document-type-form-view/document-type-form-view.component.html
+++ b/src/app/data-management/components/document-type-form/document-type-form-view/document-type-form-view.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="reportTypeForm" [formGroup]="reportTypeForm" fxLayout="column">
+<form *ngIf="documentTypeForm" [formGroup]="documentTypeForm" fxLayout="column">
   <mat-form-field>
     <input matInput placeholder="Navn" formControlName="name" />
     <mat-error *ngIf="this.name.invalid">
@@ -6,6 +6,6 @@
     </mat-error>
   </mat-form-field>
 
-  <app-submit-button [disabled]="reportTypeForm.invalid || reportTypeForm.pristine" (click)="onSubmit()">
+  <app-submit-button [disabled]="documentTypeForm.invalid || documentTypeForm.pristine" (click)="onSubmit()">
   </app-submit-button>
 </form>
