add custom icons and file icon pipe

--- a/src/app/mission/components/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
+++ b/src/app/mission/components/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="documentForm" [formGroup]="documentForm" fxLayout="column" fxLayoutAlign="space-around-center">
     <mat-form-field formGroupName="documentType">
-        <input matInput placeholder="Type rapport" aria-label="Type rapport" formControlName="name"
+        <input matInput placeholder="Type dokument" aria-label="Type dokument" formControlName="name"
             [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let type of types" [value]="type.name">
