--- a/src/app/mission/mission-document-list/document-list/document-list.component.html
+++ b/src/app/mission/mission-document-list/document-list/document-list.component.html
@@ -1,12 +1,12 @@
 <div class="entity-row">
     <div class="entity-column" *ngFor="let i of totalRows | arrayFromNumber">
-        <app-selectable-card selectedText="Rapport valgt" selectedIcon="check_circle"
+        <app-selectable-card selectedText="Dokument valgt" selectedIcon="check_circle"
             *ngFor="let selectable of (selectableEntities$ | async) | arrayslice: i:totalRows;let i = index;trackBy: trackById"
             [isSelected]="selectable.selected" (selected)="toggleSelect(selectable)"
             (click)="documentClick(selectable.entity)">
 
-            <div class="bg-foreground text-center mat-elevation-z2 p-2 pt-6 pb-6 fadeIn">
-                <mat-icon class="scale-150 mb-2">description</mat-icon>
+            <div class="app-card text-center mat-elevation-z2 p-2 pt-6 pb-6 m-1 fadeIn">
+                <mat-icon [svgIcon]="selectable.entity.fileURL | filetypeFromUrl | fileiconFromFiletype" class="scale-150 mb-2"></mat-icon>
                 <div>{{ selectable.entity.documentType?.name }}</div>
 
                 <div class="mat-caption">Filtype: {{ selectable.entity.fileURL | filetypeFromUrl | uppercase }}</div>
