created mission note list + animations

--- a/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
@@ -23,7 +23,7 @@
 
   <app-list-card text="Bilder" startIcon="photo_library" [routerLink]="['/oppdrag', vm.mission.id, 'bilder']">
   </app-list-card>
-  <app-list-card text="Dokumenter" startIcon="description" [routerLink]="['/oppdrag', vm.mission.id, 'dokumenter']">
+  <app-list-card text="Dokumenter" startIcon="folder" [routerLink]="['/oppdrag', vm.mission.id, 'dokumenter']">
   </app-list-card>
   <app-list-card text="Notater" startIcon="rate_review" [routerLink]="['/oppdrag', vm.mission.id, 'notater']">
   </app-list-card>
