--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,8 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;}
 
 .flex-nav{flex-shrink: 0;display: inline-flex;flex-direction: column;z-index:2}
 
+.float-right{float:right;}
+
 a {
   color: inherit; /* blue colors for links too */
   text-decoration: inherit; /* no underline */
