--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -14,7 +14,14 @@
 
   <mat-sidenav-content fxLayout="column" class="h-100">
 
-    <app-main-top-nav [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" class="flex-nav bg-primary-dark"></app-main-top-nav>
+    <app-detail-top-nav *ngIf="config.navType == LayoutTopNavs.Detail else defaultNav"
+      [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" class="flex-nav mat-elevation-z4 slideInDown"></app-detail-top-nav>
+
+    <ng-template #defaultNav>
+      <app-main-top-nav class="flex-nav bg-primary-dark" [ngClass]="{'mat-elevation-z4': config.elevationEnabled}"
+        [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" 
+       ></app-main-top-nav>
+    </ng-template>
 
     <!-- h-100 for iOS Safari fix -->
     <div  fxFlex style="overflow-y:auto" [@routeAnimation]="prepareRoute(outlet)">
