--- a/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
+++ b/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
@@ -19,14 +19,16 @@
     background-color: rgba(0,0,0,.3);
     color:white;
 }
+
 .overlay-top{
     top: 0;
 }
+
 .overlay-bottom{
     bottom: 0;
     pointer-events:none;
 }
-.overlay-color{
-    color: rgba(255,255,255,1)
-}
 
+.no-img-container-height{
+    height:auto;
+}
