--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -5,7 +5,7 @@
     [mode]="config.isXs ? 'over' : 'side'"
     [opened]="!config.isXs">
     <app-main-side-nav-content 
-      [user]="currentUser$ | async" 
+      [user]="config.currentUser" 
       (navItemClicked)="toggleDrawer(config.isXs)"
       (hasLoggedOut)="handleLogout()">
     </app-main-side-nav-content>
@@ -14,12 +14,16 @@
 
   <mat-sidenav-content fxLayout="column" class="h-100">
 
-    <app-detail-top-nav *ngIf="config.navType == LayoutTopNavs.Detail else defaultNav"
-      [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" class="flex-nav mat-elevation-z4 slideInDown"></app-detail-top-nav>
+    <app-detail-top-nav *ngIf="config.topDetailNavConfig else defaultNav"
+      class="flex-nav mat-elevation-z4 slideInDown"
+      [config]="config.topDetailNavConfig" 
+      (menuBtnClicked)="toggleDrawer(config.isXs)" >
+    </app-detail-top-nav>
 
     <ng-template #defaultNav>
-      <app-main-top-nav class="flex-nav bg-primary-dark" [ngClass]="{'mat-elevation-z4': config.elevationEnabled}"
-        [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" 
+      <app-main-top-nav class="flex-nav bg-primary-dark" 
+        [ngClass]="config.topDefaultNavConfig?.elevationDisabled ? '' : 'mat-elevation-z4'"
+        [config]="config.topDefaultNavConfig" (menuBtnClicked)="toggleDrawer(config.isXs)" 
        ></app-main-top-nav>
     </ng-template>
 
