add upload image to mission create/update

--- a/src/app/mission/components/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
+++ b/src/app/mission/components/mission-document-form/mission-document-form-view/mission-document-form-view.component.html
@@ -11,7 +11,8 @@
 
     <input (change)="changeFile($event)" type="file">
     <br />
-    <app-submit-button icon="cloud_upload" [disabled]="documentForm.invalid || documentForm.pristine || !this.files"
+    <app-submit-button icon="cloud_upload" 
+        [disabled]="documentForm.invalid || documentForm.pristine || !this.files"
         (click)="onSubmit()">
     </app-submit-button>
 </form>
