--- a/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.html
+++ b/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.html
@@ -1,7 +1,7 @@
-<div class="container" [style.height]="config.imgSrc ? '' : 'auto'">
+<div class="container">
 
-    <div *ngIf="config.imgSrc" class="img-container text-center">
-        <img src="{{config.imgSrc}}" />
+    <div *ngIf="config.imgSrc" class="img-container text-center mr-auto ml-auto">
+        <img appImageErrorReloader src="{{config.imgSrc | thumbnail}}" />
     </div>
 
     <mat-toolbar *ngIf="config" 
