--- a/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
+++ b/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
@@ -2,14 +2,18 @@
 
 .container {
     position:relative;
-    height:40vh;
     background-color:$primary-dark;
+    max-height:40vh;
   }
 
 .img-container{
     overflow:scroll;
     width:100%;
-    height:100%;
+    max-height:40vh; 
+    max-width:650px!important;
+    img{
+        min-width:100%;
+    }
 }
 
 .overlay{
