remove max height on sheets

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -264,6 +264,7 @@ a {
 
 mat-bottom-sheet-container{
   padding:0!important;
+  max-height:none!important;
 }
 
 .mat-icon{vertical-align: middle!important;}
