--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,3 +44,5 @@
     [routerLink]="['/oppdrag', mission.id, 'detaljer']">
   </app-list-card>
 </div>
+
+<button mat-fab color="accent" class="action_fab"><mat-icon>add_a_photo</mat-icon></button>
