--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -4,7 +4,7 @@
 </app-mission-list-view>
 
 
-<button *ifRole="[Roles.Leder]" mat-mini-fab aria-label="ny" class="action_fab_2"
+<button *ifRole="[Roles.Leder]" mat-fab aria-label="ny" class="action_fab_2"
   (click)="imageInput.click()">
   <mat-icon>note_add</mat-icon>
 </button>
