--- a/src/app/mission/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission/mission-note-list/mission-note-list.component.html
@@ -37,6 +37,6 @@
     </div>
 </div>
 
-<button *ifRole="RolePresets.Internal" mat-mini-fab aria-label="ny" class="action_fab" (click)="openCreateNoteForm()">
+<button *ifRole="RolePresets.Internal" mat-fab aria-label="ny" class="action_fab" (click)="openCreateNoteForm()">
     <mat-icon>add</mat-icon>
 </button>
