--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -15,7 +15,7 @@
 
 </div>
 
-<button *ifRole="[Roles.Leder, Roles.Mellomleder]" mat-mini-fab aria-label="ny" class="action_fab"
+<button *ifRole="[Roles.Leder, Roles.Mellomleder]" mat-fab aria-label="ny" class="action_fab"
     (click)="openMissionForm()">
     <mat-icon>add</mat-icon>
 </button>
