--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100">
 
-    <button mat-mini-fab aria-label="ny" class="action_fab" (click)="openTimesheetForm(getCurrentFilter().mission)">
+    <button mat-fab aria-label="ny" class="action_fab" (click)="openTimesheetForm(getCurrentFilter().mission)">
         <mat-icon class="scale-125">add</mat-icon>
     </button>
 
