--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -6,7 +6,7 @@
 
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
-    <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex class="fadeInRight">
+    <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex>
         <app-list-card *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" startIcon="home_work"
             [endIcon]="mission.finished ? 'check':'chevron_right'" [text]="'(' + mission.id + ') ' + mission.address"
             [routerLink]="['/oppdrag', mission.id, 'detaljer']">
