--- a/src/app/shared/components/login-prompt/login-prompt.component.html
+++ b/src/app/shared/components/login-prompt/login-prompt.component.html
@@ -1,6 +1,6 @@
-<div class="app-card m-5 fadeIn max-width" fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="8px">
+<div class="app-card m-5 fadeIn max-width" fxLayout="column" fxLayoutAlign="center stretch">
 
-  <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+  <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px"  class="mb-4">
     <img src="assets/icons/icon-144x144.png" style="width:40px;height:40px" />
     
     <span class="mat-body-strong line-height-100">Bjørkelangen<br />Bygg og Eiendom</span>
