--- a/src/app/shared/layout/icon-button/icon-button.component.html
+++ b/src/app/shared/layout/icon-button/icon-button.component.html
@@ -6,7 +6,10 @@
             config.iconSizeClass ? config.iconSizeClass : ''
         ]"
         (click)="handleFn(config.callback)">
-        <mat-icon>{{ config.icon }}</mat-icon>
+
+        <mat-icon *ngIf="config.icon">{{ config.icon }}</mat-icon>
+        <mat-icon *ngIf="config.svgIcon" [svgIcon]="config.svgIcon"></mat-icon>
+        
     </button>
 </ng-container>
 
